--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -1,7 +1,3 @@
-div.container {
-  height: 600px;
-}
-
 table {
   font-family: arial, sans-serif;
   border-collapse: collapse;
@@ -16,4 +12,50 @@ td, th {
 
 tr:nth-child(even) {
   background-color: #dddddd;
+}
+
+
+
+input[type=text], input[type=date], select {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+input[type=submit] {
+  width: 100%;
+  background-color: #4CAF50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+
+div.container {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+  margin: 0 auto;
+  width: 30%;
+}
+
+button.goback {
+  width: 100%;
+  background-color: rgb(16, 157, 223);
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
